fix:layout issue after ng16 migration

--- a/Frontend/src/app/main/navigation/top-bar/top-bar.component.scss
+++ b/Frontend/src/app/main/navigation/top-bar/top-bar.component.scss
@@ -97,6 +97,7 @@ es-imprint-privacy ::ng-deep {
 .menuButton img {
     margin-left: 0;
     width: 35px;
+    margin-right: 5px;
 }
 
 span {
